--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:label="doctorly"
         android:name="${applicationName}"
@@ -26,7 +28,12 @@
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
+
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDlyelUlpPGiEtnNjZmTi002Ce0ezXyVi8" />
+
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
