--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
 
+  geolocator: ^13.0.2
+  permission_handler: ^10.0.0
 
   flutter_bloc: ^8.1.6
   google_fonts: ^4.0.4
-
+  geocoding: ^2.1.0
+  google_maps_flutter: ^2.1.12 #google_maps_flutter
   get_it: ^8.0.2
   package_info_plus: ^4.0.1
   mask_text_input_formatter: ^2.9.0
