--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
-
+  yandex_maps_mapkit_lite: ^4.9.0-beta
   geolocator: ^13.0.2
   permission_handler: ^10.0.0
 
