--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
-  yandex_maps_mapkit_lite: ^4.9.0-beta
+
   geolocator: ^13.0.2
   permission_handler: ^10.0.0
   json_annotation: ^4.8.1
@@ -47,10 +47,12 @@ dependencies:
   geocoding: ^2.1.0
   google_maps_flutter: ^2.1.12 #google_maps_flutter
   dio: ^5.4.1
+  apple_maps_flutter: ^1.3.0
   get_it: ^8.0.2
   package_info_plus: ^4.0.1
   mask_text_input_formatter: ^2.9.0
   shared_preferences: ^2.0.13
+  yandex_mapkit: ^4.1.0
   pin_code_fields: ^8.0.1
   flutter_device_type: ^0.4.0
   flutter_svg: ^2.0.16
