--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter()
+        maven { url 'https://storage.yandex.ru/download/ya-yandexmapkit-releases' } // Yandex repository
+
     }
 }
 
